5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1872.log
== TEST (2019-05-01 18:40:44) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif()
-- ERROR:
File "XXXX", line 6
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:50:16) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y >0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3"):
elif(x > 0 and x < 0):
	print("Q4")
elif(x > 0 and y == 0):
	print("eixo X")
elif(x == 0 and y > 0):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:50:23) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y >0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(x > 0 and y == 0):
	print("eixo X")
elif(x == 0 and y > 0):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:52:47) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y >0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x >= 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y >= 0))):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:52:58) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y >0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x >= 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y >= 0))):
	print("Eixo Y")
-- EXECUTION TIME:
0.131899
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:

-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:53:04) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y >0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x >= 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y >= 0))):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:53:12) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y >0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x >= 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y >= 0))):
	print("Eixo Y")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:54:58) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x >= 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y >= 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:55:21) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:55:41) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:55:46) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:55:51) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:55:51) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:56:13) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:56:21) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and x < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- ERROR:
File "XXXX", line 9
    print("Q3"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:56:57) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:57:06) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:57:14) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:57:24) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:57:33) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- EXECUTION TIME:
0.246637
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:57:52) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:57:55) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
-- EXECUTION TIME:
0.169564
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:03:35) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
else:
	print("Q4")
elif(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
elif(x == 0 and y == 0):
	print("Origem")
else:
	print("")
-- ERROR:
File "XXXX", line 12
    elif(((x > 0) or (x < 0))  and y == 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:27) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
else:
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else(x == 0 and y == 0):
	print("Origem")
else:
	print("")
-- ERROR:
File "XXXX", line 16
    else(x == 0 and y == 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:41) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
else:
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")
else:
	print("")
-- ERROR:
File "XXXX", line 18
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:04:51) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
else:
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:06:06) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:06:12) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- EXECUTION TIME:
0.186868
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:06:26) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:07:44) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x > 0 and y > 0):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:09:14) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if((x > 0) or (x < 0) and ((y > 0) or (y < 0)):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- ERROR:
File "XXXX", line 4
    if((x > 0) or (x < 0) and ((y > 0) or (y < 0)):
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:09:36) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) and (((y > 0) or (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- ERROR:
File "XXXX", line 4
    if(((x > 0) or (x < 0)) and (((y > 0) or (y < 0))):
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:10:36) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) and (((y > 0) or (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- ERROR:
File "XXXX", line 4
    if(((x > 0) or (x < 0)) and (((y > 0) or (y < 0))):
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:11:33) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) and ((y > 0) or (y < 0)):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- ERROR:
File "XXXX", line 4
    if(((x > 0) or (x < 0)) and ((y > 0) or (y < 0)):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:12:09) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) and ((y > 0) or (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:12:21) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) and ((y > 0) or (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:12:44) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) or ((y > 0) or (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:13:00) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) and ((y > 0) or (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
elif(x < 0 and y > 0):
	print("Q2")
elif(x < 0 and y < 0):
	print("Q3")
elif(x > 0 and y < 0):
	print("Q4")
if(((x > 0) or (x < 0))  and y == 0):
	print("eixo X")
elif(x == 0 and ((y < 0) or (y > 0))):
	print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:17:29) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (Y > 0)) or ((X < 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(((x > 0) and (Y > 0)) or ((X < 0) and (y < 0))):
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:17:48) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (Y > 0)) or ((x < 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(((x > 0) and (Y > 0)) or ((x < 0) and (y < 0))):
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:17:54) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (Y > 0)) or ((x < 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(((x > 0) and (Y > 0)) or ((x < 0) and (y < 0))):
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:18:07) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (y > 0)) or ((x < 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:18:15) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (y > 0)) or ((x < 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:19:02) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (x < 0)) or ((y > 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:19:06) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) and (x < 0)) or ((y > 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:19:38) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) or ((y > 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:19:44) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) or ((y > 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:19:48) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(((x > 0) or (x < 0)) or ((y > 0) and (y < 0))):
	if((x > 0 and y > 0)):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	if(((x > 0) or (x < 0))  and y == 0):
		print("eixo X")
	elif(x == 0 and ((y < 0) or (y > 0))):
		print("Eixo Y")
else:
	print("Origem")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:23:55) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:24:03) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:24:06) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:30:42) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	elif(x == 0 and y > 0):
		print("Eixo Y")
	elif(y == 0 and x > 0)
		print("Eixo X")
-- ERROR:
File "XXXX", line 17
    elif(y == 0 and x > 0)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:30:54) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	elif(x == 0 and y > 0):
		print("Eixo Y")
	elif(y == 0 and x > 0):
		print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:31:00) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	elif(x == 0 and y > 0):
		print("Eixo Y")
	elif(y == 0 and x > 0):
		print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:31:03) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	elif(x == 0 and y > 0):
		print("Eixo Y")
	elif(y == 0 and x > 0):
		print("Eixo X")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:31:17) 
-- CODE:
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if(x == 0 and y == 0):
	print("Origem")
else:
	if(x > 0 and y > 0):
		print("Q1")
	elif(x < 0 and y > 0):
		print("Q2")
	elif(x < 0 and y < 0):
		print("Q3")
	elif(x > 0 and y < 0):
		print("Q4")
	elif(x == 0 and y > 0):
		print("Eixo Y")
	elif(y == 0 and x > 0):
		print("Eixo X")
-- EXECUTION TIME:
0.181421
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
